fix: nav-menu z-index

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,5 @@
   align-items: center;
   position: sticky;
   top: 0;
-  background-color:#fff;
-  z-index: 2;
   height: 0;
 }
