--- a/blocks/menu/__btn/menu__btn.css
+++ b/blocks/menu/__btn/menu__btn.css
@@ -9,8 +9,8 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 1;
-  }
+    z-index: 2;
+   }
 
   .menu__btn .menu__span {
     display: block;
